--- a/app.wxss
+++ b/app.wxss
@@ -60,3 +60,19 @@ page{
 .weui-dialog__bd {
  margin-bottom: 10px!important;
 }
+
+/** 空列表css */
+.public-empty-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 32px 0;
+}
+.public-empty-list image{
+  width: 160px;
+}
+.public-empty-list view{
+  margin-top: 16px;
+  color: #969799;
+}
