--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -1,11 +1,20 @@
 /* pages/about/about.wxss */
+
+.userinfo-avatar {
+  overflow: hidden;
+  width: 64rpx;
+  height: 64rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
 .public-top-title{
   display: flex;
-  flex-direction: column;
+  align-items: center;
   padding: 10px 20px;
   font-size: 12px;
   border-bottom: 1px solid #cccccc80;
-  width: 100%;
+  /* width: 100%; */
 }
 .public-top-title-left{
   font-size: 1.2em;
