--- a/pages/home/email/email.wxml
+++ b/pages/home/email/email.wxml
@@ -4,19 +4,22 @@
     <view class="public-email-content-body">
       <block wx:if="{{emailList.length > 0}}">
         <van-swipe-cell wx:for="{{emailList}}" wx:key="index" right-width="{{ 65 }}" class="my-swipe-cell">
-          <view class="public-content-item" bindtap="handleEditEmail" data-index="index">
+          <view class="public-content-item" bindtap="handleEditEmail" data-index="{{index}}">
             <view class="public-content-item-right">
-              <view class="public-content-item-absolute" catchtap="importInvoice" data-index="index">导入发票</view>
+              <view class="public-content-item-absolute" catchtap="importInvoice" data-index="{{index}}">导入发票</view>
               <view class="public-content-item-right-top">{{item.emailAccount}}</view>
             </view>
           </view>
           <view slot="right" class="public-left-template">
-            <view bindtap="handleDeleteEmail" data-index="index">删除</view>
+            <view bindtap="handleDeleteEmail" data-index="{{index}}">删除</view>
           </view>
         </van-swipe-cell>
       </block>
-      <block>
-
+      <block wx:else>
+        <view class="public-empty-list">
+          <image src="../../../images/index/empty.png" mode="widthFix"></image>
+          <view>暂无邮箱数据</view>
+        </view>
       </block>
     </view>
     <view class="weui-btn-area">
@@ -27,16 +30,14 @@
 
 <mp-dialog show="{{importShow}}" title="导入邮箱发票" buttons="{{buttons}}" bindbuttontap="importSubmit">
   <mp-cell title="起始日期">
-    <picker data-field="importDateBegin" mode="date" value="{{importForm.importDateBegin}}"  end="{{importForm.importDateEnd}}"
-    placeholder=""
-      bindchange="importDateChange">
+    <picker data-field="importDateBegin" mode="date" value="{{importForm.importDateBegin}}"
+      end="{{importForm.importDateEnd}}" placeholder="" bindchange="importDateChange">
       <view class="weui-input">{{importForm.importDateBegin}}</view>
     </picker>
   </mp-cell>
   <mp-cell title="结束日期">
-    <picker data-field="importDateEnd" mode="date" value="{{importForm.importDateEnd}}" start="{{importForm.importDateBegin}}"
-    placeholder=""
-      bindchange="importDateChange">
+    <picker data-field="importDateEnd" mode="date" value="{{importForm.importDateEnd}}"
+      start="{{importForm.importDateBegin}}" placeholder="" bindchange="importDateChange">
       <view class="weui-input">{{importForm.importDateEnd}}</view>
     </picker>
   </mp-cell>
@@ -49,9 +50,13 @@
 
 <mp-dialog show="{{addShow}}" title="{{addPopTitle}}" buttons="{{buttons}}" bindbuttontap="addSubmit">
   <mp-cell title="邮箱账号">
-    <input data-field="emailAccount" class="weui-input" placeholder="请输入邮箱账号(必填)" bindinput="formFieldChange" />
+    <input data-field="emailAccount" class="weui-input" placeholder="请输入邮箱账号(必填)" bindinput="formFieldChange"
+      value="{{addForm.emailAccount}}" />
   </mp-cell>
   <mp-cell title="授权密码">
-    <input data-field="emailPwd" class="weui-input" placeholder="请输入授权密码(必填)" bindinput="formFieldChange" />
+    <input data-field="emailPwd" class="weui-input" placeholder="请输入授权密码(必填)" bindinput="formFieldChange"
+      value="{{addForm.emailPwd}}" />
   </mp-cell>
 </mp-dialog>
+
+<mp-toptips msg="{{error}}" type="error" show="{{error}}"></mp-toptips>
