--- a/pages/home/email/email.wxss
+++ b/pages/home/email/email.wxss
@@ -89,3 +89,19 @@
 .weui-cell {
   padding: 8px 16px!important;
 }
+
+/** empty dom */
+.public-empty-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 32px 0;
+}
+.public-empty-list image{
+  width: 160px;
+}
+.public-empty-list view{
+  margin-top: 16px;
+  color: #969799;
+}
